# musualize

./: Makefile.am  README  THEORY.txt  analyzer.cpp  analyzer.h  bulletboxes.cpp  bulletboxes.h  configure.in  defines.h  display.cpp  display.h  getsink.sh  goertzel.cpp  main-bullettest.cpp  main-modelview.cpp  main.c  main.cpp  model.cpp  model.h  modeldisplay.cpp  modeldisplay.h  musicdisplay.cpp  musicdisplay.h  note.cpp  optimize.txt  pendulum.txt  refresh.sh  rhythm.txt  run.sh  run44100.sh  runmax.sh  runmic.sh  runmixer.sh
bullet/: DemoApplication.cpp  DemoApplication.h  GlutStuff.cpp  Makefile.am
docs/: pendulum.txt  rhythm.txt
