AC_INIT([musualizer], [1.0.0], [])
AM_INIT_AUTOMAKE(musualizer, 1.0.0)
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])

AC_ARG_ENABLE(debug, [AC_HELP_STRING([--enable-debug],[Debug (default=no)])],
		[use_debug=yes],[use_debug=no])

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AC_LANG_CPLUSPLUS
AC_LANG_COMPILER_REQUIRE

if test "x${use_debug}" = "xyes"
then
	CFLAGS="$CFLAGS -ggdb -O0 -DDEBUG"
else
	CFLAGS="$CFLAGS -O2"
fi
CFLAGS="$CFLAGS -std=c++11"

changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

PKG_CHECK_MODULES(GLIB, glib-2.0)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(PULSE, libpulse >= 1.1 sndfile >= 1.0.20)
AC_SUBST(PULSE_CFLAGS)
AC_SUBST(PULSE_LIBS)

AC_CHECK_LIB([glut], [glutInit])

AC_CONFIG_FILES([
Makefile
])

AC_OUTPUT

